compi/MinorC/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOBLEACCESOPUNTERO
    RAUTO
    RCONST
    RENUM
    REXTERN
    RMALLOC
    RREGISTER
    RSIZEOF

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> declaracion_registros PTCOMA
Rule 5     instruccion -> asignacion_registros PTCOMA
Rule 6     instruccion -> declaracion_structs PTCOMA
Rule 7     instruccion -> declaracion_funciones
Rule 8     instruccion -> sentencias_control
Rule 9     instruccion -> funcion_print PTCOMA
Rule 10    instruccion -> crear_struct PTCOMA
Rule 11    lsentencias -> lsentencias lsent
Rule 12    lsentencias -> lsent
Rule 13    lsent -> declaracion_registros PTCOMA
Rule 14    lsent -> asignacion_registros PTCOMA
Rule 15    lsent -> declaracion_structs PTCOMA
Rule 16    lsent -> sentencias_control
Rule 17    lsent -> funcion_print PTCOMA
Rule 18    lsent -> sentencia_break PTCOMA
Rule 19    lsent -> sentencia_continue PTCOMA
Rule 20    lsent -> sentencia_return PTCOMA
Rule 21    lsent -> callfuncion PTCOMA
Rule 22    lsent -> sentencia_etiqueta
Rule 23    lsent -> sentencia_goto
Rule 24    crear_struct -> RSTRUCT ID LLAVEIZQ lsentencias LLAVEDER
Rule 25    instruccion -> error PTCOMA
Rule 26    sentencias_control -> sentencia_if
Rule 27    sentencias_control -> sentencia_while
Rule 28    sentencias_control -> sentencia_dowhile
Rule 29    sentencias_control -> sentencia_switch
Rule 30    sentencias_control -> sentencia_for
Rule 31    sentencia_etiqueta -> ID DOSPUNTOS
Rule 32    sentencia_goto -> RGOTO ID PTCOMA
Rule 33    sentencia_return -> RRETURN expresion
Rule 34    sentencia_return -> RRETURN
Rule 35    sentencia_break -> RBREAK
Rule 36    sentencia_continue -> RCONTINUE
Rule 37    sentencia_if -> RIF PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER
Rule 38    sentencia_if -> RIF PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER RELSE LLAVEIZQ lsentencias LLAVEDER
Rule 39    sentencia_if -> RIF PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER RELSE sentencia_if
Rule 40    sentencia_switch -> RSWITCH PARIZQ expresion PARDER LLAVEIZQ l_casos LLAVEDER
Rule 41    sentencia_switch -> RSWITCH PARIZQ expresion PARDER LLAVEIZQ l_casos sentencia_default LLAVEDER
Rule 42    l_casos -> l_casos casos
Rule 43    l_casos -> casos
Rule 44    casos -> RCASE expresion DOSPUNTOS lsentencias
Rule 45    sentencia_default -> RDEFAULT DOSPUNTOS lsentencias
Rule 46    sentencia_for -> RFOR PARIZQ forinit PTCOMA expresion PTCOMA aum_dec PARDER LLAVEIZQ lsentencias LLAVEDER
Rule 47    forinit -> declaracion_registros
Rule 48    forinit -> asignacion_registros
Rule 49    aum_dec -> ID AUMENTO
Rule 50    aum_dec -> ID DECREMENTO
Rule 51    sentencia_while -> RWHILE PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER
Rule 52    sentencia_dowhile -> RDO LLAVEIZQ lsentencias LLAVEDER RWHILE PARIZQ expresion PARDER PTCOMA
Rule 53    declaracion_funciones -> tipo_variable ID PARIZQ PARDER LLAVEIZQ lsentencias LLAVEDER
Rule 54    declaracion_funciones -> tipo_variable ID PARIZQ lista_params PARDER LLAVEIZQ lsentencias LLAVEDER
Rule 55    declaracion_funciones -> RINT RMAIN PARIZQ PARDER LLAVEIZQ lsentencias LLAVEDER
Rule 56    lista_params -> lista_params COMA l_param
Rule 57    lista_params -> l_param
Rule 58    l_param -> tipo_variable ID
Rule 59    l_param -> RSTRUCT ID declar_opcion
Rule 60    funcion_print -> RPRINT PARIZQ CADENA COMA l_expresion PARDER
Rule 61    funcion_print -> RPRINT PARIZQ CADENA PARDER
Rule 62    declaracion_structs -> RSTRUCT ID declar_opcion
Rule 63    declaracion_registros -> tipo_variable lista_ids
Rule 64    asignacion_registros -> ID lopcion_asignacion tipos_asignacion expresion
Rule 65    asignacion_registros -> ID tipos_asignacion expresion
Rule 66    lopcion_asignacion -> lopcion_asignacion opcion_asignacion
Rule 67    lopcion_asignacion -> opcion_asignacion
Rule 68    opcion_asignacion -> CORIZQ expresion CORDER
Rule 69    opcion_asignacion -> PUNTO ID
Rule 70    lista_ids -> lista_ids COMA declar_opcion
Rule 71    lista_ids -> declar_opcion
Rule 72    declar_opcion -> ID
Rule 73    declar_opcion -> ID tipos_asignacion expresion
Rule 74    declar_opcion -> ID CORIZQ CORDER
Rule 75    declar_opcion -> ID CORIZQ expresion CORDER
Rule 76    declar_opcion -> ID CORIZQ CORDER tipos_asignacion expresion
Rule 77    declar_opcion -> ID CORIZQ expresion CORDER tipos_asignacion expresion
Rule 78    tipos_asignacion -> ASIG
Rule 79    tipos_asignacion -> ASIGMAS
Rule 80    tipos_asignacion -> ASIGMENOS
Rule 81    tipos_asignacion -> ASIGPOR
Rule 82    tipos_asignacion -> ASIGDIV
Rule 83    tipos_asignacion -> ASIGMODULO
Rule 84    tipos_asignacion -> ASIGSHIFTIZQ
Rule 85    tipos_asignacion -> ASIGSHITFDER
Rule 86    tipos_asignacion -> ASIGAND
Rule 87    tipos_asignacion -> ASIGOR
Rule 88    tipos_asignacion -> ASIGXOR
Rule 89    tipo_variable -> RDOUBLE
Rule 90    tipo_variable -> RINT
Rule 91    tipo_variable -> RFLOAT
Rule 92    tipo_variable -> RCHAR
Rule 93    tipo_variable -> RVOID
Rule 94    expresion -> expresion MAS expresion
Rule 95    expresion -> expresion MENOS expresion
Rule 96    expresion -> expresion POR expresion
Rule 97    expresion -> expresion DIVIDIDO expresion
Rule 98    expresion -> expresion MODULO expresion
Rule 99    expresion -> expresion RAND expresion
Rule 100   expresion -> expresion ROR expresion
Rule 101   expresion -> expresion MAYOR expresion
Rule 102   expresion -> expresion MENOR expresion
Rule 103   expresion -> expresion MAYORIGUAL expresion
Rule 104   expresion -> expresion MENORIGUAL expresion
Rule 105   expresion -> expresion IGUAL expresion
Rule 106   expresion -> expresion DIFERENTE expresion
Rule 107   expresion -> expresion RANDBIT expresion
Rule 108   expresion -> expresion RORBIT expresion
Rule 109   expresion -> expresion RXORBIT expresion
Rule 110   expresion -> expresion SHIFTIZQ expresion
Rule 111   expresion -> expresion SHIFTDER expresion
Rule 112   expresion -> MENOS expresion
Rule 113   expresion -> RNOT expresion
Rule 114   expresion -> RNOTBIT expresion
Rule 115   expresion -> callfuncion
Rule 116   expresion -> PARIZQ tipo_variable PARDER expresion
Rule 117   callfuncion -> ID PARIZQ l_expresion PARDER
Rule 118   callfuncion -> ID PARIZQ PARDER
Rule 119   expresion -> PARIZQ expresion PARDER
Rule 120   expresion -> expresion_ternario
Rule 121   expresion_ternario -> expresion TERNARIO expresion DOSPUNTOS expresion
Rule 122   expresion -> ENTERO
Rule 123   expresion -> DECIMAL
Rule 124   expresion -> CADENA
Rule 125   expresion -> ID
Rule 126   expresion -> expresion aumento_decremento
Rule 127   expresion -> RSCANF PARIZQ PARDER
Rule 128   expresion -> ID lista_accesos
Rule 129   lista_accesos -> lista_accesos lacceso
Rule 130   lista_accesos -> lacceso
Rule 131   lacceso -> CORIZQ expresion CORDER
Rule 132   lacceso -> PUNTO ID
Rule 133   expresion -> LLAVEIZQ l_expresion LLAVEDER
Rule 134   aumento_decremento -> AUMENTO
Rule 135   aumento_decremento -> DECREMENTO
Rule 136   l_expresion -> l_expresion COMA expresion
Rule 137   l_expresion -> expresion

Terminals, with rules where they appear

ASIG                 : 78
ASIGAND              : 86
ASIGDIV              : 82
ASIGMAS              : 79
ASIGMENOS            : 80
ASIGMODULO           : 83
ASIGOR               : 87
ASIGPOR              : 81
ASIGSHIFTIZQ         : 84
ASIGSHITFDER         : 85
ASIGXOR              : 88
AUMENTO              : 49 134
CADENA               : 60 61 124
COMA                 : 56 60 70 136
CORDER               : 68 74 75 76 77 131
CORIZQ               : 68 74 75 76 77 131
DECIMAL              : 123
DECREMENTO           : 50 135
DIFERENTE            : 106
DIVIDIDO             : 97
DOBLEACCESOPUNTERO   : 
DOSPUNTOS            : 31 44 45 121
ENTERO               : 122
ID                   : 24 31 32 49 50 53 54 58 59 62 64 65 69 72 73 74 75 76 77 117 118 125 128 132
IGUAL                : 105
LLAVEDER             : 24 37 38 38 39 40 41 46 51 52 53 54 55 133
LLAVEIZQ             : 24 37 38 38 39 40 41 46 51 52 53 54 55 133
MAS                  : 94
MAYOR                : 101
MAYORIGUAL           : 103
MENOR                : 102
MENORIGUAL           : 104
MENOS                : 95 112
MODULO               : 98
PARDER               : 37 38 39 40 41 46 51 52 53 54 55 60 61 116 117 118 119 127
PARIZQ               : 37 38 39 40 41 46 51 52 53 54 55 60 61 116 117 118 119 127
POR                  : 96
PTCOMA               : 4 5 6 9 10 13 14 15 17 18 19 20 21 25 32 46 46 52
PUNTO                : 69 132
RAND                 : 99
RANDBIT              : 107
RAUTO                : 
RBREAK               : 35
RCASE                : 44
RCHAR                : 92
RCONST               : 
RCONTINUE            : 36
RDEFAULT             : 45
RDO                  : 52
RDOUBLE              : 89
RELSE                : 38 39
RENUM                : 
REXTERN              : 
RFLOAT               : 91
RFOR                 : 46
RGOTO                : 32
RIF                  : 37 38 39
RINT                 : 55 90
RMAIN                : 55
RMALLOC              : 
RNOT                 : 113
RNOTBIT              : 114
ROR                  : 100
RORBIT               : 108
RPRINT               : 60 61
RREGISTER            : 
RRETURN              : 33 34
RSCANF               : 127
RSIZEOF              : 
RSTRUCT              : 24 59 62
RSWITCH              : 40 41
RVOID                : 93
RWHILE               : 51 52
RXORBIT              : 109
SHIFTDER             : 111
SHIFTIZQ             : 110
TERNARIO             : 121
error                : 25

Nonterminals, with rules where they appear

asignacion_registros : 5 14 48
aum_dec              : 46
aumento_decremento   : 126
callfuncion          : 21 115
casos                : 42 43
crear_struct         : 10
declar_opcion        : 59 62 70 71
declaracion_funciones : 7
declaracion_registros : 4 13 47
declaracion_structs  : 6 15
expresion            : 33 37 38 39 40 41 44 46 51 52 64 65 68 73 75 76 77 77 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 104 105 105 106 106 107 107 108 108 109 109 110 110 111 111 112 113 114 116 119 121 121 121 126 131 136 137
expresion_ternario   : 120
forinit              : 46
funcion_print        : 9 17
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
l_casos              : 40 41 42
l_expresion          : 60 117 133 136
l_param              : 56 57
lacceso              : 129 130
lista_accesos        : 128 129
lista_ids            : 63 70
lista_params         : 54 56
lopcion_asignacion   : 64 66
lsent                : 11 12
lsentencias          : 11 24 37 38 38 39 44 45 46 51 52 53 54 55
opcion_asignacion    : 66 67
sentencia_break      : 18
sentencia_continue   : 19
sentencia_default    : 41
sentencia_dowhile    : 28
sentencia_etiqueta   : 22
sentencia_for        : 30
sentencia_goto       : 23
sentencia_if         : 26 39
sentencia_return     : 20
sentencia_switch     : 29
sentencia_while      : 27
sentencias_control   : 8 16
tipo_variable        : 53 54 58 63 116
tipos_asignacion     : 64 65 73 76 77

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . declaracion_registros PTCOMA
    (5) instruccion -> . asignacion_registros PTCOMA
    (6) instruccion -> . declaracion_structs PTCOMA
    (7) instruccion -> . declaracion_funciones
    (8) instruccion -> . sentencias_control
    (9) instruccion -> . funcion_print PTCOMA
    (10) instruccion -> . crear_struct PTCOMA
    (25) instruccion -> . error PTCOMA
    (63) declaracion_registros -> . tipo_variable lista_ids
    (64) asignacion_registros -> . ID lopcion_asignacion tipos_asignacion expresion
    (65) asignacion_registros -> . ID tipos_asignacion expresion
    (62) declaracion_structs -> . RSTRUCT ID declar_opcion
    (53) declaracion_funciones -> . tipo_variable ID PARIZQ PARDER LLAVEIZQ lsentencias LLAVEDER
    (54) declaracion_funciones -> . tipo_variable ID PARIZQ lista_params PARDER LLAVEIZQ lsentencias LLAVEDER
    (55) declaracion_funciones -> . RINT RMAIN PARIZQ PARDER LLAVEIZQ lsentencias LLAVEDER
    (26) sentencias_control -> . sentencia_if
    (27) sentencias_control -> . sentencia_while
    (28) sentencias_control -> . sentencia_dowhile
    (29) sentencias_control -> . sentencia_switch
    (30) sentencias_control -> . sentencia_for
    (60) funcion_print -> . RPRINT PARIZQ CADENA COMA l_expresion PARDER
    (61) funcion_print -> . RPRINT PARIZQ CADENA PARDER
    (24) crear_struct -> . RSTRUCT ID LLAVEIZQ lsentencias LLAVEDER
    (89) tipo_variable -> . RDOUBLE
    (90) tipo_variable -> . RINT
    (91) tipo_variable -> . RFLOAT
    (92) tipo_variable -> . RCHAR
    (93) tipo_variable -> . RVOID
    (37) sentencia_if -> . RIF PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER
    (38) sentencia_if -> . RIF PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER RELSE LLAVEIZQ lsentencias LLAVEDER
    (39) sentencia_if -> . RIF PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER RELSE sentencia_if
    (51) sentencia_while -> . RWHILE PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER
    (52) sentencia_dowhile -> . RDO LLAVEIZQ lsentencias LLAVEDER RWHILE PARIZQ expresion PARDER PTCOMA
    (40) sentencia_switch -> . RSWITCH PARIZQ expresion PARDER LLAVEIZQ l_casos LLAVEDER
    (41) sentencia_switch -> . RSWITCH PARIZQ expresion PARDER LLAVEIZQ l_casos sentencia_default LLAVEDER
    (46) sentencia_for -> . RFOR PARIZQ forinit PTCOMA expresion PTCOMA aum_dec PARDER LLAVEIZQ lsentencias LLAVEDER

    error           shift and go to state 11
    ID              shift and go to state 13
    RSTRUCT         shift and go to state 14
    RINT            shift and go to state 15
    RPRINT          shift and go to state 21
    RDOUBLE         shift and go to state 22
    RFLOAT          shift and go to state 23
    RCHAR           shift and go to state 24
    RVOID           shift and go to state 25
    RIF             shift and go to state 26
    RWHILE          shift and go to state 27
    RDO             shift and go to state 28
    RSWITCH         shift and go to state 29
    RFOR            shift and go to state 30

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    declaracion_registros          shift and go to state 4
    asignacion_registros           shift and go to state 5
    declaracion_structs            shift and go to state 6
    declaracion_funciones          shift and go to state 7
    sentencias_control             shift and go to state 8
    funcion_print                  shift and go to state 9
    crear_struct                   shift and go to state 10
    tipo_variable                  shift and go to state 12
    sentencia_if                   shift and go to state 16
    sentencia_while                shift and go to state 17
    sentencia_dowhile              shift and go to state 18
    sentencia_switch               shift and go to state 19
    sentencia_for                  shift and go to state 20

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . declaracion_registros PTCOMA
    (5) instruccion -> . asignacion_registros PTCOMA
    (6) instruccion -> . declaracion_structs PTCOMA
    (7) instruccion -> . declaracion_funciones
    (8) instruccion -> . sentencias_control
    (9) instruccion -> . funcion_print PTCOMA
    (10) instruccion -> . crear_struct PTCOMA
    (25) instruccion -> . error PTCOMA
    (63) declaracion_registros -> . tipo_variable lista_ids
    (64) asignacion_registros -> . ID lopcion_asignacion tipos_asignacion expresion
    (65) asignacion_registros -> . ID tipos_asignacion expresion
    (62) declaracion_structs -> . RSTRUCT ID declar_opcion
    (53) declaracion_funciones -> . tipo_variable ID PARIZQ PARDER LLAVEIZQ lsentencias LLAVEDER
    (54) declaracion_funciones -> . tipo_variable ID PARIZQ lista_params PARDER LLAVEIZQ lsentencias LLAVEDER
    (55) declaracion_funciones -> . RINT RMAIN PARIZQ PARDER LLAVEIZQ lsentencias LLAVEDER
    (26) sentencias_control -> . sentencia_if
    (27) sentencias_control -> . sentencia_while
    (28) sentencias_control -> . sentencia_dowhile
    (29) sentencias_control -> . sentencia_switch
    (30) sentencias_control -> . sentencia_for
    (60) funcion_print -> . RPRINT PARIZQ CADENA COMA l_expresion PARDER
    (61) funcion_print -> . RPRINT PARIZQ CADENA PARDER
    (24) crear_struct -> . RSTRUCT ID LLAVEIZQ lsentencias LLAVEDER
    (89) tipo_variable -> . RDOUBLE
    (90) tipo_variable -> . RINT
    (91) tipo_variable -> . RFLOAT
    (92) tipo_variable -> . RCHAR
    (93) tipo_variable -> . RVOID
    (37) sentencia_if -> . RIF PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER
    (38) sentencia_if -> . RIF PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER RELSE LLAVEIZQ lsentencias LLAVEDER
    (39) sentencia_if -> . RIF PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER RELSE sentencia_if
    (51) sentencia_while -> . RWHILE PARIZQ expresion PARDER LLAVEIZQ lsentencias LLAVEDER
    (52) sentencia_dowhile -> . RDO LLAVEIZQ lsentencias LLAVEDER RWHILE PARIZQ expresion PARDER PTCOMA
    (40) sentencia_switch -> . RSWITCH PARIZQ expresion PARDER LLAVEIZQ l_casos LLAVEDER
    (41) sentencia_switch -> . RSWITCH PARIZQ expresion PARDER LLAVEIZQ l_casos sentencia_default LLAVEDER
    (46) sentencia_for -> . RFOR PARIZQ forinit PTCOMA expresion PTCOMA aum_dec PARDER LLAVEIZQ lsentencias LLAVEDER

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 11
    ID              shift and go to state 13
    RSTRUCT         shift and go to state 14
    RINT            shift and go to state 15
    RPRINT          shift and go to state 21
    RDOUBLE         shift and go to state 22
    RFLOAT          shift and go to state 23
    RCHAR           shift and go to state 24
    RVOID           shift and go to state 25
    RIF             shift and go to state 26
    RWHILE          shift and go to state 27
    RDO             shift and go to state 28
    RSWITCH         shift and go to state 29
    RFOR            shift and go to state 30

    instruccion                    shift and go to state 31
    declaracion_registros          shift and go to state 4
    asignacion_registros           shift and go to state 5
    declaracion_structs            shift and go to state 6
    declaracion_funciones          shift and go to state 7
    sentencias_control             shift and go to state 8
    funcion_print                  shift and go to state 9
    crear_struct                   shift and go to state 10
    tipo_variable                  shift and go to state 12
    sentencia_if                   shift and go to state 16
    sentencia_while                shift and go to state 17
    sentencia_dowhile              shift and go to state 18
    sentencia_switch               shift and go to state 19
    sentencia_for                  shift and go to state 20

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RSTRUCT         reduce using rule 3 (instrucciones -> instruccion .)
    RINT            reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    RDOUBLE         reduce using rule 3 (instrucciones -> instruccion .)
    RFLOAT          reduce using rule 3 (instrucciones -> instruccion .)
    RCHAR           reduce using rule 3 (instrucciones -> instruccion .)
    RVOID           reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RDO             reduce using rule 3 (instrucciones -> instruccion .)
    RSWITCH         reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> declaracion_registros . PTCOMA

    PTCOMA          shift and go to state 32


state 5

    (5) instruccion -> asignacion_registros . PTCOMA

    PTCOMA          shift and go to state 33


state 6

    (6) instruccion -> declaracion_structs . PTCOMA

    PTCOMA          shift and go to state 34


state 7

    (7) instruccion -> declaracion_funciones .

    error           reduce using rule 7 (instruccion -> declaracion_funciones .)
    ID              reduce using rule 7 (instruccion -> declaracion_funciones .)
    RSTRUCT         reduce using rule 7 (instruccion -> declaracion_funciones .)
    RINT            reduce using rule 7 (instruccion -> declaracion_funciones .)
    RPRINT          reduce using rule 7 (instruccion -> declaracion_funciones .)
    RDOUBLE         reduce using rule 7 (instruccion -> declaracion_funciones .)
    RFLOAT          reduce using rule 7 (instruccion -> declaracion_funciones .)
    RCHAR           reduce using rule 7 (instruccion -> declaracion_funciones .)
    RVOID           reduce using rule 7 (instruccion -> declaracion_funciones .)
    RIF             reduce using rule 7 (instruccion -> declaracion_funciones .)
    RWHILE          reduce using rule 7 (instruccion -> declaracion_funciones .)
    RDO             reduce using rule 7 (instruccion -> declaracion_funciones .)
    RSWITCH         reduce using rule 7 (instruccion -> declaracion_funciones .)
    RFOR            reduce using rule 7 (instruccion -> declaracion_funciones .)
    $end            reduce using rule 7 (instruccion -> declaracion_funciones .)


state 8

    (8) instruccion -> sentencias_control .

    error           reduce using rule 8 (instruccion -> sentencias_control .)
    ID              reduce using rule 8 (instruccion -> sentencias_control .)
    RSTRUCT         reduce using rule 8 (instruccion -> sentencias_control .)
    RINT            reduce using rule 8 (instruccion -> sentencias_control .)
    RPRINT          reduce using rule 8 (instruccion -> sentencias_control .)
    RDOUBLE         reduce using rule 8 (instruccion -> sentencias_control .)
    RFLOAT          reduce using rule 8 (instruccion -> sentencias_control .)
    RCHAR           reduce using rule 8 (instruccion -> sentencias_control .)
    RVOID           reduce using rule 8 (instruccion -> sentencias_control .)
    RIF             reduce using rule 8 (instruccion -> sentencias_control .)
    RWHILE          reduce using rule 8 (instruccion -> sentencias_control .)
    RDO             reduce using rule 8 (instruccion -> sentencias_control .)
    RSWITCH         reduce using rule 8 (instruccion -> sentencias_control .)
    RFOR            reduce using rule 8 (instruccion -> sentencias_control .)
    $end            reduce using rule 8 (instruccion -> sentencias_control .)


state 9

    (9) instruccion -> funcion_print . PTCOMA

    PTCOMA          shift and go to state 35


state 10

    (10) instruccion -> crear_struct . PTCOMA

    PTCOMA          shift and go to state 36


state 11

    (25) instruccion -> error . PTCOMA

    PTCOMA          shift and go to state 37


state 12

    (63) declaracion_registros -> tipo_variable . lista_ids
    (53) declaracion_funciones -> tipo_variable . ID PARIZQ PARDER LLAVEIZQ lsentencias LLAVEDER
    (54) declaracion_funciones -> tipo_variable . ID PARIZQ lista_params PARDER LLAVEIZQ lsentencias LLAVEDER
    (70) lista_ids -> . lista_ids COMA declar_opcion
    (71) lista_ids -> . declar_opcion
    (72) declar_opcion -> . ID
    (73) declar_opcion -> . ID tipos_asignacion expresion
    (74) declar_opcion -> . ID CORIZQ CORDER
    (75) declar_opcion -> . ID CORIZQ expresion CORDER
    (76) declar_opcion -> . ID CORIZQ CORDER tipos_asignacion expresion
    (77) declar_opcion -> . ID CORIZQ expresion CORDER tipos_asignacion expresion

    ID              shift and go to state 39

    lista_ids                      shift and go to state 38
    declar_opcion                  shift and go to state 40

state 13

    (64) asignacion_registros -> ID . lopcion_asignacion tipos_asignacion expresion
    (65) asignacion_registros -> ID . tipos_asignacion expresion
    (66) lopcion_asignacion -> . lopcion_asignacion opcion_asignacion
    (67) lopcion_asignacion -> . opcion_asignacion
    (78) tipos_asignacion -> . ASIG
    (79) tipos_asignacion -> . ASIGMAS
    (80) tipos_asignacion -> . ASIGMENOS
    (81) tipos_asignacion -> . ASIGPOR
    (82) tipos_asignacion -> . ASIGDIV
    (83) tipos_asignacion -> . ASIGMODULO
    (84) tipos_asignacion -> . ASIGSHIFTIZQ
    (85) tipos_asignacion -> . ASIGSHITFDER
    (86) tipos_asignacion -> . ASIGAND
    (87) tipos_asignacion -> . ASIGOR
    (88) tipos_asignacion -> . ASIGXOR
    (68) opcion_asignacion -> . CORIZQ expresion CORDER
    (69) opcion_asignacion -> . PUNTO ID

    ASIG            shift and go to state 44
    ASIGMAS         shift and go to state 45
    ASIGMENOS       shift and go to state 46
    ASIGPOR         shift and go to state 47
    ASIGDIV         shift and go to state 48
    ASIGMODULO      shift and go to state 49
    ASIGSHIFTIZQ    shift and go to state 50
    ASIGSHITFDER    shift and go to state 51
    ASIGAND         shift and go to state 52
    ASIGOR          shift and go to state 53
    ASIGXOR         shift and go to state 54
    CORIZQ          shift and go to state 55
    PUNTO           shift and go to state 56

    lopcion_asignacion             shift and go to state 41
    tipos_asignacion               shift and go to state 42
    opcion_asignacion              shift and go to state 43

state 14

    (62) declaracion_structs -> RSTRUCT . ID declar_opcion
    (24) crear_struct -> RSTRUCT . ID LLAVEIZQ lsentencias LLAVEDER

    ID              shift and go to state 57


state 15

    (55) declaracion_funciones -> RINT . RMAIN PARIZQ PARDER LLAVEIZQ lsentencias LLAVEDER
    (90) tipo_variable -> RINT .

    RMAIN           shift and go to state 58
    ID              reduce using rule 90 (tipo_variable -> RINT .)


state 16

    (26) sentencias_control -> sentencia_if .

    error           reduce using rule 26 (sentencias_control -> sentencia_if .)
    ID              reduce using rule 26 (sentencias_control -> sentencia_if .)
    RSTRUCT         reduce using rule 26 (sentencias_control -> sentencia_if .)
    RINT            reduce using rule 26 (sentencias_control -> sentencia_if .)
    RPRINT          reduce using rule 26 (sentencias_control -> sentencia_if .)
    RDOUBLE         reduce using rule 26 (sentencias_control -> sentencia_if .)
    RFLOAT          reduce using rule 26 (sentencias_control -> sentencia_if .)
    RCHAR           reduce using rule 26 (sentencias_control -> sentencia_if .)
    RVOID           reduce using rule 26 (sentencias_control -> sentencia_if .)
    RIF             reduce using rule 26 (sentencias_control -> sentencia_if .)
    RWHILE          reduce using rule 26 (sentencias_control -> sentencia_if .)
    RDO             reduce using rule 26 (sentencias_control -> sentencia_if .)
    RSWITCH         reduce using rule 26 (sentencias_control -> sentencia_if .)
    RFOR            reduce using rule 26 (sentencias_control -> sentencia_if .)
    $end            reduce using rule 26 (sentencias_control -> sentencia_if .)
    LLAVEDER        reduce using rule 26 (sentencias_control -> sentencia_if .)
    RBREAK          reduce using rule 26 (sentencias_control -> sentencia_if .)
    RCONTINUE       reduce using rule 26 (sentencias_control -> sentencia_if .)
    RRETURN         reduce using rule 26 (sentencias_control -> sentencia_if .)
    RGOTO           reduce using rule 26 (sentencias_control -> sentencia_if .)
    RDEFAULT        reduce using rule 26 (sentencias_control -> sentencia_if .)
    RCASE           reduce using rule 26 (sentencias_control -> sentencia_if .)


state 17

    (27) sentencias_control -> sentencia_while .

    error           reduce using rule 27 (sentencias_control -> sentencia_while .)
    ID              reduce using rule 27 (sentencias_control -> sentencia_while .)
    RSTRUCT         reduce using rule 27 (sentencias_control -> sentencia_while .)
    RINT            reduce using rule 27 (sentencias_control -> sentencia_while .)
    RPRINT          reduce using rule 27 (sentencias_control -> sentencia_while .)
    RDOUBLE         reduce using rule 27 (sentencias_control -> sentencia_while .)
    RFLOAT          reduce using rule 27 (sentencias_control -> sentencia_while .)
    RCHAR           reduce using rule 27 (sentencias_control -> sentencia_while .)
    RVOID           reduce using rule 27 (sentencias_control -> sentencia_while .)
    RIF             reduce using rule 27 (sentencias_control -> sentencia_while .)
    RWHILE          reduce using rule 27 (sentencias_control -> sentencia_while .)
    RDO             reduce using rule 27 (sentencias_control -> sentencia_while .)
    RSWITCH         reduce using rule 27 (sentencias_control -> sentencia_while .)
    RFOR            reduce using rule 27 (sentencias_control -> sentencia_while .)
    $end            reduce using rule 27 (sentencias_control -> sentencia_while .)
    LLAVEDER        reduce using rule 27 (sentencias_control -> sentencia_while .)
    RBREAK          reduce using rule 27 (sentencias_control -> sentencia_while .)
    RCONTINUE       reduce using rule 27 (sentencias_control -> sentencia_while .)
    RRETURN         reduce using rule 27 (sentencias_control -> sentencia_while .)
    RGOTO           reduce using rule 27 (sentencias_control -> sentencia_while .)
    RDEFAULT        reduce using rule 27 (sentencias_control -> sentencia_while .)
    RCASE           reduce using rule 27 (sentencias_control -> sentencia_while .)


state 18

    (28) sentencias_control -> sentencia_dowhile .

    error           reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    ID              reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RSTRUCT         reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RINT            reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RPRINT          reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RDOUBLE         reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RFLOAT          reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RCHAR           reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RVOID           reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RIF             reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RWHILE          reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RDO             reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RSWITCH         reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RFOR            reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    $end            reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    LLAVEDER        reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RBREAK          reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RCONTINUE       reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RRETURN         reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RGOTO           reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RDEFAULT        reduce using rule 28 (sentencias_control -> sentencia_dowhile .)
    RCASE           reduce using rule 28 (sentencias_control -> sentencia_dowhile .)


state 19

    (29) sentencias_control -> sentencia_switch .
